<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/ic_home" />
    <item
        android:id="@+id/nav_favorites"
        android:title="@string/nav_favorites"
        android:icon="@drawable/ic_favorite" />
    <item
        android:id="@+id/nav_profile"
        android:title="@string/nav_profile"
        android:icon="@drawable/ic_profile" />
    <item
        android:id="@+id/nav_access_list"
        android:title="@string/nav_access_list"
        android:icon="@drawable/ic_accesses" />
    <item
        android:id="@+id/nav_create_vehicle"
        android:title="@string/nav_create_vehicle"
        android:icon="@drawable/ic_create_car" />

</menu>
