<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:gravity="start"
            android:layout_gravity="start"
            android:padding="8dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_search"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_uploadimage"
                app:endIconContentDescription="@string/select_image"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxStrokeColor="#CCCCCC"
                app:boxStrokeWidth="2dp"
                android:background="@drawable/rounded_edit_text"
                android:padding="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextBastidor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_cars_hint"
                    android:inputType="text"
                    android:background="@android:color/transparent"
                    android:drawablePadding="10dp"
                    android:paddingStart="50dp"
                    android:imeOptions="actionDone"/>
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:visibility="gone"
            android:background="@drawable/rounded_image_background"
            android:padding="8dp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/txtMatricula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/license_plate"
            android:textStyle="bold"
            android:visibility="gone"
            android:padding="8dp"/>

    </LinearLayout>
</RelativeLayout>
